--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion": "^10.9.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
